--- a/pyqt-study/weather/weather.ui
+++ b/pyqt-study/weather/weather.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>507</width>
-    <height>492</height>
+    <width>511</width>
+    <height>535</height>
    </rect>
   </property>
   <property name="font">
@@ -22,30 +22,40 @@
   <widget class="QLabel" name="select_city_label">
    <property name="geometry">
     <rect>
-     <x>80</x>
+     <x>260</x>
      <y>40</y>
-     <width>91</width>
+     <width>51</width>
      <height>31</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <family>Adobe Arabic</family>
-     <pointsize>16</pointsize>
+     <pointsize>14</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
     </font>
    </property>
    <property name="text">
-    <string>选择城市</string>
+    <string>城市:</string>
    </property>
   </widget>
   <widget class="QComboBox" name="comboBox_select_city">
    <property name="geometry">
     <rect>
-     <x>210</x>
+     <x>320</x>
      <y>40</y>
-     <width>111</width>
+     <width>131</width>
      <height>31</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Adobe Arabic</family>
+     <pointsize>14</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
    </property>
    <item>
     <property name="text">
@@ -140,6 +150,37 @@
    </property>
    <property name="autoFillBackground">
     <bool>false</bool>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_province">
+   <property name="geometry">
+    <rect>
+     <x>40</x>
+     <y>42</y>
+     <width>61</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Adobe Arabic</family>
+     <pointsize>14</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="text">
+    <string>省份：</string>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="comboBox_province">
+   <property name="geometry">
+    <rect>
+     <x>110</x>
+     <y>40</y>
+     <width>121</width>
+     <height>31</height>
+    </rect>
    </property>
   </widget>
  </widget>
